--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
 # Dependencies
 node_modules/
 package-lock.json
+yarn.lock
 
 # TypeScript build output
 build/
 dist/
+lib/
+*.tsbuildinfo
 
 # Environment variables
 .env
 .env.local
+.env.development
+.env.test
+.env.production
 .env.*.local
 
 # IDE and editor files
@@ -17,6 +23,11 @@ dist/
 *.swp
 *.swo
 .DS_Store
+*.sublime-*
+.project
+.settings/
+.classpath
+*.iml
 
 # Logs
 logs/
@@ -24,10 +35,35 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 # Testing
 coverage/
+.nyc_output/
+junit.xml
+test-results/
 
 # Misc
 .cache/
-.temp/ 
+.temp/
+.tmp/
+tmp/
+temp/
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Debug files
+.debug/
+debug.log
+
+# Local configuration
+*.local.json
+*.local.js
+*.local.ts
+
+# Optional: Application specific
+src/**/*.js.map
+src/**/*.d.ts 
