--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
     "start": "node build/index.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@modelcontextprotocol/sdk": "^1.0.1",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.13",
+    "@types/react-dom": "^18.3.1",
+    "ai": "^4.0.11",
+    "autoprefixer": "^10.4.20",
+    "next": "^15.0.3",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.16",
     "ws": "^8.14.2"
   },
   "devDependencies": {
